# spork

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
scripts/: install.sh  spork  uninstall.sh
src/spork/: arch.py  branding.py  bucket.py  cache.py  cli.py  commands.py  config.py  doctor.py  downloader.py  dpkg.py  errors.py  i18n.py  index.py  installer.py  manifest.py  models.py  output.py  paths.py  remover.py  self_update.py  state.py  system_packages.py
src/spork/package_managers/: __init__.py  apt.py  common.py  detection.py  dnf.py  pacman.py  zypper.py
src/spork/providers/: __init__.py  architecture.py  fixed_url.py  github_release.py  html_regex.py
tests/: test_apt_package_manager.py  test_architecture.py  test_bucket.py  test_cli.py  test_index.py  test_installer.py
